--- a/src/styles.css
+++ b/src/styles.css
@@ -26,7 +26,7 @@ p,.submitButton{
     width: 100%;
 }
 .connerDeFeoNavigation{
-    font-size: 24px;
+    font-size: 16px;
 }
 .formNameEmail{
     height: 7vh;
@@ -105,7 +105,12 @@ p,.submitButton{
     font-size: 1vw;
 }
 .submitButton {
-    color: white; /* Initial text color */
+    color: white; 
+}
+@media(min-width: 300px){
+    .connerDeFeoNavigation{
+        font-size: 24px;
+    }
 }
 @media(min-width: 992px){
     iframe{
